--- a/src/views/client/user.ejs
+++ b/src/views/client/user.ejs
@@ -6,6 +6,7 @@
     <title>Moda Studio | Quản trị người dùng</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
+    <%- include('../partials/theme-init') %>
 </head>
 
 <body class="<%= theme === 'dark' ? 'theme-dark' : 'theme-light' %>">
